# forum

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  svelte.config.js
.svelte-kit/: ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/server/: index.js  internal.js  manifest-full.js  manifest.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/chunks/: Icon.js  button.js  client.js  database.js  events.js  index2.js  index3.js  internal.js
.svelte-kit/output/server/nodes/: 0.js  1.js  10.js  2.js  3.js  4.js  5.js  7.js
.svelte-kit/types/: route_meta_data.json
.svelte-kit/types/src/routes/: $types.d.ts  proxy+layout.server.ts
.svelte-kit/vercel-tmp/: manifest.js
.vercel/output/static/_app/: version.json
docs/: DATABASE.md
src/: app.css  app.html  auth.ts  hooks.server.ts  init.sql  sample.sql
src/gcp/: .gcloudignore  Dockerfile  main.py  requirements.txt
src/lib/common/: Attachment.ts  Post.ts  Thread.ts  User.ts
src/lib/components/: MainSidebar.svelte  Menubar.svelte  UserAvatar.svelte
src/lib/components/forum/: ActionBar.svelte  Post.svelte  PostAttachments.svelte  PostList.svelte  PostPreview.svelte  Reply.svelte  ReplyForm.svelte  ThreadHeader.svelte  ThreadPreview.svelte
src/lib/db/: database.ts
src/lib/forum/: Attachment.ts  Post.ts  Thread.ts
src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
src/routes/forum/: +page.svelte  +page.ts
src/routes/search/: +page.svelte
src/routes/thread/: +error.svelte
(+181 files in other folders)
